--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,33 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      th:replace="~{layouts/layout::main-fragment (~{::title},
+~{::h1},
+~{:: div.container}
+)}">
 <head>
-  <meta charset="UTF-8">
-  <title>Student Management System</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <title>Login Management System</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" th:href="@{/index}">Student Management
-      System</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page"
-             th:href="@{/register}">Register</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
 <br/><br/>
+<h1></h1>
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
@@ -72,10 +54,7 @@
             </div>
             <div class="form-group mb-3">
               <button type="submit" class="btn btn-primary">Submit</button>
-              <span> Not registered ?
-<a th:href="@{/register}">Register/Signup
-here</a>
-</span>
+              <span> Not registered ? <a th:href="@{/register}">Register/Signup here</a></span>
             </div>
           </form>
         </div>
